# gemini_summariser

./: .gitignore  README.md  pyproject.toml
src/: config.py  const.py  exceptions.py  main.py
src/core/: __init__.py  base_video.py  video_factory.py  youtube_video.py
src/disk_cache/: __init__.py  cache.py  icache_manager.py  json_cache_manager.py
src/downloader/: __init__.py  download_status.py  downloader.py  parsed_audio_format.py  parsed_video_format.py
src/gemini_output/: __init__.py  base_output.py  console_output.py  file_output.py
src/google_files/: __init__.py  google_files_manager.py  google_files_mappings_json.py  igoogle_files_mappings.py
src/output_handlers/: __init__.py  gemini_output.py  markdown_printer.py
src/prompts/: __init__.py  prompts.py
src/samples/: chat.py  doc_reading.py  prompts.py  sample.py  video_example.py
src/video/: __init__.py  base_video.py  local_video.py  video_factory.py  youtube_video.py
src/youtube_video/: downloader.py  video.py
