[project]
name = "geminisummariser"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = "~=3.10"
dependencies = ["google-generativeai>=0.8.4,<0.9", "python-dotenv>=1.0.1,<2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
ignore = ["E402", "F401"]
src = ["src"]

[tool.pyright]
reportPrivateImportUsage = false

[tool.hatch.build.targets.wheel]
packages = ["src"]
